testsuite/tests/generic-optional-arguments/incompatible_gen_opt_3.compilers.reference
File "incompatible_gen_opt_3.ml", lines 15-19, characters 15-3:
15 | ...............struct
16 |   (* This should fail - implementation uses Stdlib.Or_null.?' but interface
17 |      declares Stdlib.Option.?' *)
18 |   let f Stdlib.Or_null.?'(x : int = 42) () = x
19 | end
Error: Signature mismatch:
       Modules do not match:
         sig val f : Stdlib.Or_null.?'x:int -> unit -> int @@ stateless end
       is not included in
         S
       Values do not match:
         val f : Stdlib.Or_null.?'x:int -> unit -> int @@ stateless
       is not included in
         val f : Stdlib.Option.?'x:int -> unit -> int
       The type "Stdlib.Or_null.?'x:int -> unit -> int"
       is not compatible with the type "Stdlib.Option.?'x:int -> unit -> int"
       File "incompatible_gen_opt_3.ml", line 12, characters 2-46:
         Expected declaration
       File "incompatible_gen_opt_3.ml", line 18, characters 6-7:
         Actual declaration
